# timesarrow

./: .github-repo-description  .gitignore  README.md  SciPost.cls  Time Reversal Symmetry_Group Theory_Xie Chen.skim  ai-assistance-statement.md  buildtex  cover-letter.md  dashboard.html  index.html  mdpi.cls  package-lock.json  package.json  pytikz.py  robots.txt  search.json  sitemap.xml  spt-lqg-mapping.tex  supplementary-calculations.tex  t20d-fss-analysis.tex  t20d-fss-standalone.aux  t20d-fss-standalone.out  t20d-fss-standalone.tex  tensor networks.drawio  tensor networks.drawio.xml  timesarrow-mdpi.tex  timesarrow.bbl  timesarrow.bib  timesarrow.synctex.gz.ocTransferId247434317.part  timesarrow.tex  tsconfig.json  z2-action-derivation.tex
.claude/: settings.local.json
.openclaw/: workspace-state.json
arxiv_submission_v1/: timesarrow.tex
figures/: 3-vertex-v2.tex  3-vertex-z2-gauge-action.drawio  3-vertex.tex  cnot.tex  czx-circuit.tex  czx-labelled-vertex.tex  czx-lattice.tex  czx-vertex-states-v2.tikz  czx-vertex-states-v3.tex  czx-vertex-states-v4.tex  czx-vertex-states.tex  czx-vertex-v2.tex  czx-vertex-v3.tex  czx-vertex.tex  czx.tikzstyles  local-symmetry-flux.tex  mps-gauge-action-v2.tex  mps-gauge-action-v3.tex  mps-gauge-action-v4.tex  mps-gauge-action.tex  mps-state.tex  mps-vertex-product-trace.tex  mps-vertex-product.tex  single-vertex.tex  (+4 more)
rust-lattice/: Cargo.toml
rust-lattice/scripts/: run-signed-volume.sh
rust-lattice/src/: cell_complex.rs  lib.rs  main.rs  t35a_thread2.rs  t35b_gate1.rs  t35b_power.rs  t35b_quick.rs  t35b_verify.rs
(+563 files in other folders)
