[package]
name = "z2-lattice-gauge"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
rand_xoshiro = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
chrono = { version = "0.4", features = ["std"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
