[package]
name = "z2-lattice-gauge"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
rand_xoshiro = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
chrono = { version = "0.4", features = ["std"] }
ndarray = "0.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[[bin]]
name = "z2-lattice-gauge"
path = "src/main.rs"

[[bin]]
name = "t35a-thread2"
path = "src/t35a_thread2.rs"

[[bin]]
name = "t35b-gate1"
path = "src/t35b_gate1.rs"

[[bin]]
name = "t35b-verify"
path = "src/t35b_verify.rs"

[[bin]]
name = "t35b-power"
path = "src/t35b_power.rs"

[[bin]]
name = "t35b-quick"
path = "src/t35b_quick.rs"
